src/components/shared/calendar/Calendar.css
.react-calendar {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 340px;
  max-width: 100%;
  background: white;
  border: none;
  line-height: 20px;
  color: #aeaeae;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.42px;
  padding: 0 20px;
  padding-bottom: 8px;
}

.react-calendar__month-view__days {
  gap: 8px 14.6px;
  place-content: flex-end;
}

.react-calendar--doubleView {
  width: 700px;
}

.react-calendar--doubleView .react-calendar__viewContainer {
  display: flex;
  margin: -0.5em;
}

.react-calendar--doubleView .react-calendar__viewContainer > * {
  width: 50%;
  margin: 0.5em;
}

.react-calendar,
.react-calendar *,
.react-calendar *:before,
.react-calendar *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.react-calendar button {
  margin: 0;
  border: 0;
  outline: none;
}

.react-calendar button:enabled:hover {
  cursor: pointer;
}

.react-calendar__navigation {
  justify-self: center;
  display: flex;
  gap: 12px;
  width: 184px;
  height: 44px;
  padding: 8px 0;
  margin-bottom: 4px;
  font-size: 16px;
  line-height: 20px;
  letter-spacing: 0.48px;
  color: #0a0a0a;
}

.react-calendar__navigation button {
  flex: none;
  min-width: 14px;
  background: none;
}

.react-calendar__navigation__arrow .react-calendar__navigation__prev-button {
  margin-right: 24px;
}

.react-calendar__navigation__arrow .react-calendar__navigation__next-button {
  margin-left: 24px;
}

.react-calendar__navigation button:disabled {
  background-color: #f0f0f0;
}

.react-calendar__navigation button:enabled:hover,
.react-calendar__navigation button:enabled:focus {
  background-color: transparent;
}

.react-calendar__month-view__weekdays {
  display: flex !important;
  justify-content: space-between;
  text-align: center;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.42px;
  margin-bottom: 4px;
  padding: 4px 0px;
}

.react-calendar__month-view__weekdays__weekday {
  flex: none !important;
  width: 30px;
  height: 30px;
  margin-bottom: 4px;
}

.react-calendar__month-view__weekdays__weekday abbr:where([title]) {
  text-decoration: none;
}

.react-calendar__month-view__weekNumbers .react-calendar__tile {
  display: flex;
  align-items: center;
  justify-content: center;
  flex: none;
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  letter-spacing: 0.42px;
}

.react-calendar__month-view__days__day--weekend {
  color: #aeaeae;
}

.react-calendar__month-view__days__day--neighboringMonth,
.react-calendar__decade-view__years__year--neighboringDecade,
.react-calendar__century-view__decades__decade--neighboringCentury {
  color: #757575;
}

.react-calendar__year-view .react-calendar__tile,
.react-calendar__decade-view .react-calendar__tile,
.react-calendar__century-view .react-calendar__tile {
  padding: 2em 0.5em;
}

.react-calendar__tile {
  max-width: 100%;
  width: 30px;
  height: 30px;
  flex: none !important;
  align-items: center;
  border-radius: 9999px;
  margin-bottom: 12px !important;
  background: none;
  text-align: center;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.42px;
}

.react-calendar__year-view__months__month {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 60px;
}

.react-calendar__decade-view__years__year {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
}

.react-calendar__century-view__decades__decade {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
}

.react-calendar__tile:disabled {
  background-color: #f0f0f0;
  color: #ababab;
}

.react-calendar__month-view__days__day--neighboringMonth:disabled,
.react-calendar__decade-view__years__year--neighboringDecade:disabled,
.react-calendar__century-view__decades__decade--neighboringCentury:disabled {
  color: #cdcdcd;
}

.react-calendar__tile:enabled:hover,
.react-calendar__tile:enabled:focus {
  background-color: #e6e6e6;
}

.react-calendar__tile--now {
  background: #e6e6e6;
}

/* .react-calendar__tile--now:enabled:hover,
  .react-calendar__tile--now:enabled:focus {
    background: #ffffa9;
  } */

.react-calendar__tile--hasActive {
  background: #76baff;
}

.react-calendar__tile--hasActive:enabled:hover,
.react-calendar__tile--hasActive:enabled:focus {
  background: #a9d4ff;
}

.react-calendar__tile--active {
  background: #0a0a0a;
  border-radius: 9999px;
  color: white;
}

.react-calendar__tile--active:enabled:hover,
.react-calendar__tile--active:enabled:focus {
  background: #1087ff;
}

.react-calendar--selectRange .react-calendar__tile--hover {
  background-color: #e6e6e6;
}

